Watchlist page Whitespace, HitCount Tooltip Fix
#526
#591

--- a/gtas-parent/gtas-webapp/src/main/webapp/resources/css/gtas.css
+++ b/gtas-parent/gtas-webapp/src/main/webapp/resources/css/gtas.css
@@ -213,7 +213,7 @@
   text-transform: uppercase;
   margin: 5px;
 }
-.notif-tooltip {
+.multi-tooltip {
   max-width:400px;
   word-wrap: break-word !important;
   height: auto !important;
